[package]
name = "owl"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
reqwest = {version = "0.11.11", features = ["blocking"]}
error-chain = {version = "0.12.4"}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"